// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageSidebar - Snapshots > matches snapshot with custom tags and links 1`] = `
<div
  class="sticky top-[calc(var(--header-height)+var(--profile-header-height))] hidden w-[180px] flex-col gap-6 self-start lg:flex"
  data-testid="container"
>
  <div
    class="flex flex-col gap-2"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Tagged as
    </h2>
    <div
      class="flex flex-col gap-2"
      data-testid="container"
    >
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex h-8 w-fit cursor-pointer items-center justify-between rounded-md px-3 transition-all duration-200"
          data-testid="tag-0"
          style="background-color: rgba(224, 255, 0, 0.3); border: 1px solid transparent;"
        >
          <p
            class="text-sm font-semibold text-foreground"
            data-testid="tag-name"
          >
            custom1
          </p>
          <p
            class="text-sm ml-1.5 font-medium text-foreground/50"
            data-testid="tag-count"
          >
            10
          </p>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 size-9"
          data-size="icon"
          data-slot="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search text-secondary-foreground"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex h-8 w-fit cursor-pointer items-center justify-between rounded-md px-3 transition-all duration-200"
          data-testid="tag-1"
          style="background-color: rgba(225, 0, 255, 0.3); border: 1px solid transparent;"
        >
          <p
            class="text-sm font-semibold text-foreground"
            data-testid="tag-name"
          >
            custom2
          </p>
          <p
            class="text-sm ml-1.5 font-medium text-foreground/50"
            data-testid="tag-count"
          >
            20
          </p>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 size-9"
          data-size="icon"
          data-slot="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search text-secondary-foreground"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 border border-border bg-foreground/5"
      data-size="sm"
      data-slot="button"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-tag text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
        />
        <circle
          cx="7.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
      <span
        class="text-foreground text-sm font-bold"
        data-testid="typography"
      >
        Add Tag
      </span>
    </button>
  </div>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Links
    </h2>
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <a
        class="flex items-center gap-2.5 py-1"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Icon
        </span>
        <span
          class="flex-1 text-base font-medium text-secondary-foreground"
        >
          Example
        </span>
      </a>
    </div>
  </div>
  <div
    class="flex flex-col gap-2"
    data-testid="feedback-card"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Feedback
    </h2>
    <div
      class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
      data-testid="container"
    >
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
          data-testid="container"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-12 w-12"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="text-base font-bold text-foreground"
          data-testid="container"
        >
          Your Name
        </div>
      </div>
      <div
        class="cursor-pointer text-base leading-normal font-medium text-muted-foreground transition-colors hover:text-foreground"
        data-testid="container"
      >
        What do you think about Pubky?
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfilePageSidebar - Snapshots > matches snapshot with default props 1`] = `
<div
  class="sticky top-[calc(var(--header-height)+var(--profile-header-height))] hidden w-[180px] flex-col gap-6 self-start lg:flex"
  data-testid="container"
>
  <div
    class="flex flex-col gap-2"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Tagged as
    </h2>
    <div
      class="flex flex-col gap-2"
      data-testid="container"
    >
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex h-8 w-fit cursor-pointer items-center justify-between rounded-md px-3 transition-all duration-200"
          data-testid="tag-0"
          style="background-color: rgba(255, 203, 0, 0.3); border: 1px solid transparent;"
        >
          <p
            class="text-sm font-semibold text-foreground"
            data-testid="tag-name"
          >
            satoshi
          </p>
          <p
            class="text-sm ml-1.5 font-medium text-foreground/50"
            data-testid="tag-count"
          >
            36
          </p>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 size-9"
          data-size="icon"
          data-slot="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search text-secondary-foreground"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex h-8 w-fit cursor-pointer items-center justify-between rounded-md px-3 transition-all duration-200"
          data-testid="tag-1"
          style="background-color: rgba(255, 153, 0, 0.3); border: 1px solid transparent;"
        >
          <p
            class="text-sm font-semibold text-foreground"
            data-testid="tag-name"
          >
            bitcoin
          </p>
          <p
            class="text-sm ml-1.5 font-medium text-foreground/50"
            data-testid="tag-count"
          >
            21
          </p>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 size-9"
          data-size="icon"
          data-slot="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search text-secondary-foreground"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex h-8 w-fit cursor-pointer items-center justify-between rounded-md px-3 transition-all duration-200"
          data-testid="tag-2"
          style="background-color: rgba(0, 216, 255, 0.3); border: 1px solid transparent;"
        >
          <p
            class="text-sm font-semibold text-foreground"
            data-testid="tag-name"
          >
            og
          </p>
          <p
            class="text-sm ml-1.5 font-medium text-foreground/50"
            data-testid="tag-count"
          >
            5
          </p>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 size-9"
          data-size="icon"
          data-slot="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search text-secondary-foreground"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 border border-border bg-foreground/5"
      data-size="sm"
      data-slot="button"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-tag text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
        />
        <circle
          cx="7.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
      <span
        class="text-foreground text-sm font-bold"
        data-testid="typography"
      >
        Add Tag
      </span>
    </button>
  </div>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Links
    </h2>
    <div
      class="flex flex-col"
      data-testid="container"
    >
      <a
        class="flex items-center gap-2.5 py-1"
        href="https://bitcoin.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link shrink-0 text-foreground"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class="flex-1 text-base font-medium text-secondary-foreground"
        >
          bitcoin.org
        </span>
      </a>
      <a
        class="flex items-center gap-2.5 py-1"
        href="https://x.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-x-twitter shrink-0 text-foreground"
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_18345_202114)"
          >
            <path
              d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
              fill="currentColor"
              opacity="0.8"
            />
          </g>
          <defs>
            <clippath
              id="clip0_18345_202114"
            >
              <rect
                fill="white"
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
        <span
          class="flex-1 text-base font-medium text-secondary-foreground"
        >
          x.com
        </span>
      </a>
      <a
        class="flex items-center gap-2.5 py-1"
        href="https://youtube.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play shrink-0 text-foreground"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span
          class="flex-1 text-base font-medium text-secondary-foreground"
        >
          youtube.com
        </span>
      </a>
      <a
        class="flex items-center gap-2.5 py-1"
        href="https://telegram.chat"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-telegram shrink-0 text-foreground"
          fill="none"
          height="16"
          viewBox="4 4 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9678 5.27685C19.9548 5.21777 19.9265 5.16317 19.8856 5.11857C19.8448 5.07397 19.7929 5.04095 19.7351 5.02286C19.5249 4.98123 19.3074 4.99665 19.1052 5.06753C19.1052 5.06753 5.08674 10.1065 4.28612 10.6645C4.11413 10.7845 4.05614 10.8545 4.02747 10.9365C3.88882 11.3365 4.32012 11.5084 4.32012 11.5084L7.93322 12.6857C7.99432 12.6967 8.05714 12.693 8.11655 12.675C8.93783 12.1557 16.3827 7.45271 16.8153 7.29472C16.882 7.27472 16.9333 7.29472 16.92 7.34471C16.748 7.94801 10.3144 13.663 10.2791 13.6976C10.2619 13.7117 10.2485 13.7299 10.2401 13.7505C10.2317 13.7711 10.2286 13.7935 10.2311 13.8156L9.89376 17.3434C9.89376 17.3434 9.75244 18.4413 10.8504 17.3434C11.629 16.5641 12.3763 15.9188 12.7496 15.6049C13.9922 16.4628 15.3288 17.4114 15.9054 17.908C16.0024 18.0019 16.1173 18.0753 16.2433 18.1237C16.3693 18.1722 16.5038 18.1947 16.6387 18.19C16.8048 18.1698 16.9608 18.0994 17.086 17.9883C17.2111 17.8772 17.2995 17.7306 17.3393 17.5681C17.3393 17.5681 19.8925 7.28672 19.9778 5.90947C19.9865 5.77615 19.9978 5.68815 19.9991 5.59549C20.0033 5.48834 19.9927 5.38113 19.9678 5.27685Z"
            fill="currentColor"
          />
        </svg>
        <span
          class="flex-1 text-base font-medium text-secondary-foreground"
        >
          telegram.chat
        </span>
      </a>
    </div>
  </div>
  <div
    class="flex flex-col gap-2"
    data-testid="feedback-card"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Feedback
    </h2>
    <div
      class="flex flex-col gap-4 rounded-lg border border-dashed border-input p-6"
      data-testid="container"
    >
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <div
          class="flex size-12 items-center justify-center rounded-md p-2 shadow-xs"
          data-testid="container"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-12 w-12"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="text-base font-bold text-foreground"
          data-testid="container"
        >
          Your Name
        </div>
      </div>
      <div
        class="cursor-pointer text-base leading-normal font-medium text-muted-foreground transition-colors hover:text-foreground"
        data-testid="container"
      >
        What do you think about Pubky?
      </div>
    </div>
  </div>
</div>
`;
